Updated files after testing video submission and token
